[gd_scene load_steps=8 format=2]

[ext_resource path="res://Slimes/SlimeSpawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Cursor.tscn" type="PackedScene" id=3]
[ext_resource path="res://Paths/World1_tileset.tres" type="TileSet" id=4]
[ext_resource path="res://main.gd" type="Script" id=5]
[ext_resource path="res://Background.png" type="Texture" id=6]
[ext_resource path="res://Tower/TowerMark.tscn" type="PackedScene" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 24, -8, 0, 0, 0, 0, 24, 152, 0, 0, 0, 0, 88, 152, 0, 0, 0, 0, 88, 24, 0, 0, 0, 0, 152, 24, 0, 0, 0, 0, 152, 152, 0, 0, 0, 0, 216, 152, 0, 0, 0, 0, 216, 24, 0, 0, 0, 0, 280, 24, 0, 0, 0, 0, 280, 152, 0, 0, 0, 0, 376, 152 )
}

[node name="World1" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 180.903, 132.963 )
scale = Vector2( 23.6129, 17.6203 )
texture = ExtResource( 6 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 1
format = 1
tile_data = PoolIntArray( -65535, 0, 0, 1, 0, 0, 65537, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 131073, 0, 0, 131077, 0, 0, 131081, 0, 0, 131085, 0, 0, 131089, 0, 0, 196609, 0, 0, 196613, 0, 0, 196617, 0, 0, 196621, 0, 0, 196625, 0, 0, 262145, 0, 0, 262149, 0, 0, 262153, 0, 0, 262157, 0, 0, 262161, 0, 0, 327681, 0, 0, 327685, 0, 0, 327689, 0, 0, 327693, 0, 0, 327697, 0, 0, 393217, 0, 0, 393221, 0, 0, 393225, 0, 0, 393229, 0, 0, 393233, 0, 0, 458753, 0, 0, 458757, 0, 0, 458761, 0, 0, 458765, 0, 0, 458769, 0, 0, 524289, 0, 0, 524293, 0, 0, 524297, 0, 0, 524301, 0, 0, 524305, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0 )

[node name="Cursor" parent="." instance=ExtResource( 3 )]
position = Vector2( 7.23921, 1.75438 )

[node name="wave_timer" type="Timer" parent="."]

[node name="mob_timer" type="Timer" parent="."]

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="Bound1" type="Position2D" parent="." groups=[
"bound1",
]]
position = Vector2( 0, 168 )

[node name="Bound2" type="Position2D" parent="." groups=[
"bound2",
]]
position = Vector2( 360, 272 )

[node name="SlimeSpawner" parent="." instance=ExtResource( 2 )]

[node name="TowerMarks" type="Node2D" parent="."]

[node name="TowerMark" parent="TowerMarks" instance=ExtResource( 7 )]
position = Vector2( 56, 120 )

[node name="TowerMark4" parent="TowerMarks" instance=ExtResource( 7 )]
position = Vector2( 120, 120 )

[node name="TowerMark5" parent="TowerMarks" instance=ExtResource( 7 )]
position = Vector2( 120, 88 )

[node name="TowerMark6" parent="TowerMarks" instance=ExtResource( 7 )]
position = Vector2( 120, 56 )

[node name="TowerMark7" parent="TowerMarks" instance=ExtResource( 7 )]
position = Vector2( 184, 56 )

[node name="TowerMark8" parent="TowerMarks" instance=ExtResource( 7 )]
position = Vector2( 184, 88 )

[node name="TowerMark9" parent="TowerMarks" instance=ExtResource( 7 )]
position = Vector2( 184, 120 )

[node name="TowerMark10" parent="TowerMarks" instance=ExtResource( 7 )]
position = Vector2( 248, 120 )

[node name="TowerMark11" parent="TowerMarks" instance=ExtResource( 7 )]
position = Vector2( 248, 88 )

[node name="TowerMark12" parent="TowerMarks" instance=ExtResource( 7 )]
position = Vector2( 248, 56 )

[node name="TowerMark2" parent="TowerMarks" instance=ExtResource( 7 )]
position = Vector2( 56, 88 )

[node name="TowerMark3" parent="TowerMarks" instance=ExtResource( 7 )]
position = Vector2( 56, 56 )

[connection signal="timeout" from="wave_timer" to="." method="_on_wave_timer_timeout"]
[connection signal="timeout" from="mob_timer" to="." method="_on_mob_timer_timeout"]
